[package]
name = "rust-compiler"
version = "0.1.0"
authors = ["Emily Åkerström <emily.akerstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.0"

[dependencies]
lalrpop-util = "0.19.0"
regex = "1"

